<resources>
    <string name="app_name">Report Manager</string>
    <string name="header_name">Name</string>
    <string name="header_date">Data</string>
    <string name="header_time">Time</string>
    <string name="header_user">User</string>
    <string name="header_local">Local</string>
    <string name="search_for">Search for %s</string>
    <string name="export">export name</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="user">user</string>
    <string name="place">place</string>
</resources>
