<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="#d3d3d3"
                tools:context=".view.ui.MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical">
        <TableLayout
                android:id="@+id/tableLayoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*">

            <TableRow
                    android:id="@+id/tableRow_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF5722"
                    android:padding="0dp"
                    android:gravity="center">

                <TextView
                        android:id="@+id/Header_name"
                        android:text="@string/header_name"
                        android:typeface="serif"
                        android:textColor="#FFF"
                        android:layout_weight="0.2"
                        android:textSize="@dimen/text_size"></TextView>

                <TextView
                        android:id="@+id/Header_Date"
                        android:text="@string/header_date"
                        android:typeface="serif"
                        android:textColor="#FFF"
                        android:layout_weight="0.2"
                        android:textSize="@dimen/text_size"></TextView>

                <TextView
                        android:id="@+id/Header_Time"
                        android:text="@string/header_time"
                        android:typeface="serif"
                        android:textColor="#FFF"
                        android:layout_weight="0.2"
                        android:textSize="@dimen/text_size"></TextView>

                <TextView
                        android:id="@+id/Header_User"
                        android:text="@string/header_user"
                        android:typeface="serif"
                        android:textColor="#FFF"
                        android:layout_weight="0.5"
                        android:textSize="@dimen/text_size"></TextView>

                <TextView
                        android:id="@+id/Header_Local"
                        android:text="@string/header_local"
                        android:typeface="serif"
                        android:textColor="#FFF"
                        android:layout_weight="0.5"
                        android:textSize="@dimen/text_size"></TextView>
            </TableRow>
        </TableLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableLayout
                    android:id="@+id/tableLayoutBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="*">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/report_view"/>

            </TableLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>